# hitman

./: Cargo.toml  README.md  ROADMAP.md  mise.toml
example/: .gitignore  create_issue.http  get_issues.http  get_repos.http  get_repos.http.toml  hitman.toml
src/: cli.rs  env.rs  extract.rs  flurry.rs  interaction.rs  lib.rs  loader.rs  logging.rs  main.rs  main_ui.rs  monitor.rs  prompt.rs  replacer.rs  request.rs  resolve.rs  scope.rs  substitute.rs  util.rs  watcher.rs
src/ui/: app.rs  datepicker.rs  help.rs  interaction.rs  keymap.rs  mod.rs  output.rs  progress.rs  prompt.rs  select.rs
